# pdf-rag

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
rag/: __init__.py  api.py  core.py  mcp_server.py
scripts/: fetch_docs.py  gen_docs.py
static/: index.html
tests/: test_core.py
