[project]
name = "pdf-rag"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0",
    "pdfplumber>=0.11",
    "sentence-transformers>=5.4",
    "chromadb>=1.5",
    "flask>=3.1",
    "mcp[cli]>=1.27",
    "fpdf2>=2.8",
    "pytest>=8.0",
    "python-dotenv>=1.0",
]

[tool.setuptools]
packages = ["rag"]

[tool.pytest.ini_options]
pythonpath = ["."]
